--- a/index.html
+++ b/index.html
@@ -6,4 +6,25 @@
         <link href="styles.css" rel="stylesheet" type="text/css">
         <title>Dropdown Menus and Submenus Template</title>
     </head>
+    <body>
+        <nav>
+            <h3 class="shinkai-label">Shinkai Films</h3>
+            <div class="menu-bar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li class="films-sub-menu"><a href="#">Films</a>
+                        <ul>
+                            <li><a href="index.html#place-promised-early-days">The Place Promised in Our Early Days</a></li>
+                            <li><a href="index.html#5-centimeters">5 Centimeters Per Second</a></li>
+                            <li><a href="index.html#children-chase-voices">Children Who Chase Lost Voices</a></li>
+                            <li><a href="index.html#garden-of-words">The Garden of Words</a></li>
+                            <li><a href="index.html#your-name">Your Name</a></li>
+                            <li><a href="index.html#weathering-with-you">Weathering with You</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="ranking.html">My Ranking</a></li>
+                </ul>
+            </div>
+        </nav>       
+    </body>
 </html>
